<resources>
    <string name="app_name">파수군</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- 권한 화면 -->
    <string name="permission_checking">권한 확인중…</string>
    <string name="permission_setting_title">권한 설정</string>
    <string name="permission_setting_message">앱을 실행하기 위해서는 권한 설정을 해야합니다!</string>
    <string name="permission_setting_restart">권한을 설정하고 다시 실행해 주세요!</string>

    <!-- 시작 화면 -->
    <string name="index_message">파수군\nfor\nAndroid</string>
    <string name="YJM">YJM</string>

    <string name="submit">확인</string>
    <string name="network_not_working">네트워크에 연결되어 있지 않습니다.\n일부 기능이 제한됩니다.</string>
    <string name="server_not_connecting">서버와 연결이 되지 않습니다.\n일부 기능이 제한됩니다.</string>

    <!-- 왼쪽 메뉴-->
    <string name="main">메인화면</string>
    <string name="set_auto_off_time">자동실행 시간 설정</string>
    <string name="check_people">부대원 설정 여부 확인</string>
    <string name="security_day">사이버보안진단의날 설정</string>

    <string name="private_setting">개인 설정</string>
    <string name="profile_setting">프로필 설정</string>

    <!-- 공통 -->
    <string name="skip_string">…</string>

    <string name="close">닫기</string>
    <string name="cancel">취소</string>
    <string name="setting">설정</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>

    <!-- 프로필 -->
    <string name="profile_name">이름</string>
    <string name="profile_phone">전화</string>

    <string name="device_number">기기 번호</string>
    <string name="phone_number">전화 번호</string>

    <string name="name_need">이름을 설정해주세요</string>
    <string name="change_save">변경사항을 저장하시겠습니까?</string>

    <string name="no_change">변경된 사항이 없습니다</string>
    <string name="no_data">데이터가 없습니다</string>

    <string name="member_insert_fail_message">사용자 등록에 실패하였습니다. 다시 시도해주세요.</string>

    <!-- 메인 화면 -->

    <string name="wireless_off">무선 통신 기능 Off</string>
    <string name="install_vaccine">백신 설치</string>
    <string name="warning_camera">카메라 사용시 경고 On</string>
    <string name="wireless_off_description">Wi-fi, NFC, bluetooth 등 무선 통신 기능을 원클릭으로 종료합니다.</string>
    <string name="install_vaccine_description">초록불 : 백신 설치 / 빨간불 : 백신 미설치(V3기준)\n 버튼을 누르면 백신(V3)설치 화면으로 이동합니다.</string>
    <string name="warning_camera_description">카메라 사용시 경고창을 띄울지 설정합니다.</string>

    <!-- 경고창 -->
    <string name="warning">경고!</string>
    <string name="warning_use_camera">부대 내에서는 사진 촬영금지입니다! </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 시간 설정 화면 -->
    <string name="descript_time_setting">설정한 시간 이후에 스마트폰을 켰을때 파수군을 자동으로 실행합니다.</string>
    <string name="delete_setting">설정 해제</string>

</resources>
