<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/g1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_main"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_alarm"
            android:title="@string/set_auto_off_time" />
        <item
            android:id="@+id/nav_check"
            android:icon="@drawable/ic_check"
            android:title="@string/check_people" />
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_calendar"
            android:title="@string/security_day" />

    </group>

    <item
        android:id="@+id/g2"
        android:title="@string/private_setting">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile_setting" />
        </menu>
    </item>

</menu>
