<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_index"
    tools:context="com.example.administrator.pasugoon.IndexActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large2"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:text="@string/index_message"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_large2"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/spacing_xlarge2"
        android:gravity="center"
        android:text="@string/YJM"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_large2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/close"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textColor="@color/text_color_purple"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@drawable/button_round"
        android:text="@string/submit"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone" />
</RelativeLayout>
