<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.pasugoon.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/card1"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="@dimen/cardview_round_basic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:orientation="vertical"
                android:layout_gravity="top"
                android:gravity="top" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/spacing_medium2"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/wireless_off"
                        android:textSize="@dimen/text_size_large2"
                        android:textColor="@color/text_color_black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/wireless_toggle_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/button_round_red"
                        android:scaleType="fitXY"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_basic_gray"
                    android:text="@string/wireless_off_description"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_color_gray"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/card2"
        android:layout_below="@+id/card1"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="@dimen/cardview_round_basic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:orientation="vertical"
                android:layout_gravity="top"
                android:gravity="top" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/spacing_medium2"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/install_vaccine"
                        android:textSize="@dimen/text_size_large2"
                        android:textColor="@color/text_color_black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/install_vaccine_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/button_round_red"
                        android:scaleType="fitXY"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_basic_gray"
                    android:text="@string/install_vaccine_description"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_color_gray"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card2"
        android:id="@+id/card3"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="@dimen/cardview_round_basic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:orientation="vertical"
                android:layout_gravity="top"
                android:gravity="top" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:paddingBottom="@dimen/spacing_medium2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/warning_camera"
                        android:textSize="@dimen/text_size_large2"
                        android:textColor="@color/text_color_black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/warning_toggle_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/button_round_red"
                        android:scaleType="fitXY"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_basic_gray"
                    android:text="@string/warning_camera_description"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_color_gray"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card3"
        android:id="@+id/dangerous_case_text"
        android:paddingTop="@dimen/spacing_xlarge2"
        android:gravity="center"
        android:text="사고사례"/>

</RelativeLayout>
